--- a/MegaDeskWebPages/Pages/Shared/_Layout.cshtml
+++ b/MegaDeskWebPages/Pages/Shared/_Layout.cshtml
@@ -14,19 +14,20 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     </environment>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+                <a asp-page="DeskQuotes/Index" class="navbar-brand">MegaDeskWebPages</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">MegaDeskWebPages</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
