--- a/MegaDeskWebPages/Pages/DeskQuotes/Create.cshtml
+++ b/MegaDeskWebPages/Pages/DeskQuotes/Create.cshtml
@@ -20,21 +20,15 @@
                 <span asp-validation-for="NewQuote.CustomerName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewQuote.DeliveryID" class="control-label"></label>
-                <select asp-for="NewQuote.DeliveryID" class="form-control" asp-items="ViewBag.DeliveryID"></select>
+                <label asp-for="NewQuote.Delivery.RushOrderDay" class="control-label"></label>
+                <select asp-for="NewQuote.Delivery.RushOrderDay" class="form-control" asp-items="Model.DeliveryList"></select>
             </div>
 
             <div class="form-group">
-                <label asp-for="NewQuote.Desk.MaterialID" class="control-label"></label>
-                <select asp-for="NewQuote.Desk.MaterialID" class="form-control" asp-items="Model.MaterialList"></select>
+                <label asp-for="NewQuote.Desk.Material.MaterialType" class="control-label"></label>
+                <select asp-for="NewQuote.Desk.Material.MaterialType" class="form-control" asp-items="Model.MaterialList"></select>
             </div>
 
-            <!--
-                div class="form-group">
-                <label asp-for="NewQuote.Desk.Material.MaterialID" class="control-label"></label>
-                <select asp-for="NewQuote.Desk.Material.MaterialID" class="form-control" asp-items="ViewBag.Desk"></select>
-            </div>
-                -->
             <div class="form-group">
                 <label asp-for="NewQuote.Desk.NumDrawers" class="control-label"></label>
                 <input asp-for="NewQuote.Desk.NumDrawers" class="form-control" />
